Creado mediante Colaboratory

--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -40833,6 +40833,7 @@
         "from sklearn.metrics import classification_report\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import MultiLabelBinarizer\n",
+        "import tensorflow as tf\n",
         "import keras\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.image as mpimg\n",
@@ -43645,7 +43646,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 731
         },
-        "outputId": "7b084d11-0e4b-42dd-8a72-389de8c3d5d4"
+        "outputId": "d91ff8fb-230f-4972-e0a5-76e3a8468c48"
       },
       "source": [
         "better_model = Sequential()\n",
@@ -43671,48 +43672,48 @@
         "\n",
         "better_model.summary()"
       ],
-      "execution_count": 367,
+      "execution_count": 372,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_16\"\n",
+            "Model: \"sequential_19\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_38 (Conv2D)           (None, 255, 255, 32)      1184      \n",
+            "conv2d_46 (Conv2D)           (None, 255, 255, 32)      1184      \n",
             "_________________________________________________________________\n",
-            "activation_21 (Activation)   (None, 255, 255, 32)      0         \n",
+            "activation_26 (Activation)   (None, 255, 255, 32)      0         \n",
             "_________________________________________________________________\n",
-            "conv2d_39 (Conv2D)           (None, 253, 253, 32)      9248      \n",
+            "conv2d_47 (Conv2D)           (None, 253, 253, 32)      9248      \n",
             "_________________________________________________________________\n",
-            "activation_22 (Activation)   (None, 253, 253, 32)      0         \n",
+            "activation_27 (Activation)   (None, 253, 253, 32)      0         \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_9 (MaxPooling2 (None, 126, 126, 32)      0         \n",
+            "max_pooling2d_11 (MaxPooling (None, 126, 126, 32)      0         \n",
             "_________________________________________________________________\n",
-            "dropout_13 (Dropout)         (None, 126, 126, 32)      0         \n",
+            "dropout_16 (Dropout)         (None, 126, 126, 32)      0         \n",
             "_________________________________________________________________\n",
-            "conv2d_40 (Conv2D)           (None, 126, 126, 64)      18496     \n",
+            "conv2d_48 (Conv2D)           (None, 126, 126, 64)      18496     \n",
             "_________________________________________________________________\n",
-            "activation_23 (Activation)   (None, 126, 126, 64)      0         \n",
+            "activation_28 (Activation)   (None, 126, 126, 64)      0         \n",
             "_________________________________________________________________\n",
-            "conv2d_41 (Conv2D)           (None, 124, 124, 64)      36928     \n",
+            "conv2d_49 (Conv2D)           (None, 124, 124, 64)      36928     \n",
             "_________________________________________________________________\n",
-            "activation_24 (Activation)   (None, 124, 124, 64)      0         \n",
+            "activation_29 (Activation)   (None, 124, 124, 64)      0         \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_10 (MaxPooling (None, 62, 62, 64)        0         \n",
+            "max_pooling2d_12 (MaxPooling (None, 62, 62, 64)        0         \n",
             "_________________________________________________________________\n",
-            "dropout_14 (Dropout)         (None, 62, 62, 64)        0         \n",
+            "dropout_17 (Dropout)         (None, 62, 62, 64)        0         \n",
             "_________________________________________________________________\n",
-            "flatten_8 (Flatten)          (None, 246016)            0         \n",
+            "flatten_11 (Flatten)         (None, 246016)            0         \n",
             "_________________________________________________________________\n",
-            "dense_28 (Dense)             (None, 512)               125960704 \n",
+            "dense_34 (Dense)             (None, 512)               125960704 \n",
             "_________________________________________________________________\n",
-            "activation_25 (Activation)   (None, 512)               0         \n",
+            "activation_30 (Activation)   (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dropout_15 (Dropout)         (None, 512)               0         \n",
+            "dropout_18 (Dropout)         (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_29 (Dense)             (None, 17)                8721      \n",
+            "dense_35 (Dense)             (None, 17)                8721      \n",
             "=================================================================\n",
             "Total params: 126,035,281\n",
             "Trainable params: 126,035,281\n",
@@ -43742,7 +43743,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         },
         "outputId": "48ba0c0e-bd12-4382-a321-26ac7915fca0"
       },
@@ -43757,15 +43758,27 @@
         "                    validation_steps=STEP_SIZE_TEST,\n",
         "                    use_multiprocessing=True)"
       ],
-      "execution_count": 0,
+      "execution_count": 371,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/1\n",
-            "  29/1011 [..............................] - ETA: 1:16:18 - loss: 0.7381 - accuracy: 0.8651"
+            "1011/1011 [==============================] - 4633s 5s/step - loss: 0.2349 - accuracy: 0.9130 - val_loss: 0.1868 - val_accuracy: 0.9191\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.callbacks.History at 0x7fd85ffe3a20>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 371
         }
       ]
     },
@@ -43785,6 +43798,80 @@
       "cell_type": "code",
       "metadata": {
         "id": "dpAfONI_Jgcl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def tags_mapping(one_hot_encoding):\n",
+        "\tvalues = one_hot_encoding.round()\n",
+        "\ttags = [tokenizer.index_word[i+1] for i in range(len(values)) if values[i] == 1.0]\n",
+        "\treturn tags"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TvSSGsduJq9A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def read_image(path,label):\n",
+        "  img_raw = tf.io.read_file(path)\n",
+        "  image = tf.image.decode_png(img_raw, channels=3)\n",
+        "  img_final = tf.image.resize(image, [TARGET_SIZE, TARGET_SIZE])\n",
+        "  img_final = img_final/255.0\n",
+        "  return img_final,label"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e5jRRv35JVNn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 350
+        },
+        "outputId": "355ef552-4db9-4d4d-df28-62a9358e1b0c"
+      },
+      "source": [
+        "img, label = read_image(X_train[0],y_train[0])\n",
+        " \n",
+        "img=tf.expand_dims(img,axis=0)\n",
+        " \n",
+        "prediction=model.predict(img,steps=1)[0]\n",
+        " \n",
+        "prediction_tags=tags_mapping(prediction)\n",
+        " \n",
+        "original_tags=tags_mapping(label)\n",
+        "image = imread(X_train[img_id])\n",
+        "plt.imshow(image)"
+      ],
+      "execution_count": 381,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-381-f9460ec3827b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-378-8b1e29ece977>\u001b[0m in \u001b[0;36mread_image\u001b[0;34m(path, label)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mread_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mimg_raw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode_png\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_raw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mimg_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mTARGET_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTARGET_SIZE\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mimg_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg_final\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m255.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w1bjeo6OJl-a",
         "colab_type": "code",
         "colab": {}
       },
