--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -3208,8 +3208,27 @@
       "source": [
         "# make predictions on the testing images, finding the index of the\n",
         "# label with the corresponding largest predicted probability\n",
-        "predIdxs = loaded_model.predict_generator(test_generator, steps=STEP_SIZE_TEST)\n",
-        "# predIdxs = np.argmax(predIdxs, axis=1)"
+        "predIdxs = loaded_model.predict_generator(test_generator, steps=STEP_SIZE_TEST)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IEJSGAYhNwSw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "predIdxs = np.rint(predIdxs)\n",
+        "# display(len(predIdxs))\n",
+        "# for pred in predIdxs[0]:\n",
+        "#   print(pred)\n",
+        "# display(\"\")\n",
+        "# display(len(test_onehot_labels))\n",
+        "# for label in test_onehot_labels[0]:\n",
+        "#   print(label)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3219,14 +3238,47 @@
       "metadata": {
         "id": "JU4Ig4Y9PT6I",
         "colab_type": "code",
+        "outputId": "1e06375b-e6ec-439f-d0c8-e3c13ddafba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        }
+      },
+      "source": [
+        "# show a nicely formatted classification report\n",
+        "print(\"[INFO] evaluating network...\")\n",
+        "\n",
+        "print(classification_report(predIdxs[0], y_pred=test_onehot_labels[0]))"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO] evaluating network...\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "         0.0       0.88      0.93      0.90        15\n",
+            "         1.0       0.00      0.00      0.00         2\n",
+            "\n",
+            "    accuracy                           0.82        17\n",
+            "   macro avg       0.44      0.47      0.45        17\n",
+            "weighted avg       0.77      0.82      0.80        17\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "akGC23NfLG4p",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "display(len(predIdxs))\n",
-        "display(len(test_onehot_labels))\n",
-        "# show a nicely formatted classification report\n",
-        "print(\"[INFO] evaluating network...\")\n",
-        "print(classification_report(predIdxs, y_pred=test_onehot_labels))"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
