--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -192,7 +192,7 @@
         "from keras.utils.vis_utils import model_to_dot\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.preprocessing.text import Tokenizer\n",
-        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import classification_report, log_loss, accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import MultiLabelBinarizer\n",
         "import tensorflow as tf\n",
@@ -202,7 +202,9 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
+        "from scipy import sparse\n",
         "from collections import Counter\n",
+        "import json\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "%matplotlib inline\n",
@@ -3222,13 +3224,8 @@
       },
       "source": [
         "predIdxs = np.rint(predIdxs)\n",
-        "# display(len(predIdxs))\n",
-        "# for pred in predIdxs[0]:\n",
-        "#   print(pred)\n",
-        "# display(\"\")\n",
-        "# display(len(test_onehot_labels))\n",
-        "# for label in test_onehot_labels[0]:\n",
-        "#   print(label)"
+        "pred_labels = np.array(predIdxs, dtype=int).tolist()\n",
+        "true_labels = np.array(test_onehot_labels)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3238,33 +3235,23 @@
       "metadata": {
         "id": "JU4Ig4Y9PT6I",
         "colab_type": "code",
-        "outputId": "1e06375b-e6ec-439f-d0c8-e3c13ddafba5",
+        "outputId": "54dbec09-4827-4437-9a72-e9f3163b5ee5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 34
         }
       },
       "source": [
-        "# show a nicely formatted classification report\n",
-        "print(\"[INFO] evaluating network...\")\n",
-        "\n",
-        "print(classification_report(predIdxs[0], y_pred=test_onehot_labels[0]))"
+        "# Hamming-Loss is the fraction of labels that are incorrectly predicted, i.e., the fraction of the wrong labels to the total number of labels\n",
+        "hamming_loss  = np.sum(np.not_equal(true_labels, predIdxs))/float(true_labels.size)\n",
+        "print(\"Hamming-Loss: \", hamming_loss)"
       ],
-      "execution_count": 56,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[INFO] evaluating network...\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "         0.0       0.88      0.93      0.90        15\n",
-            "         1.0       0.00      0.00      0.00         2\n",
-            "\n",
-            "    accuracy                           0.82        17\n",
-            "   macro avg       0.44      0.47      0.45        17\n",
-            "weighted avg       0.77      0.82      0.80        17\n",
-            "\n"
+            "Hamming-Loss:  0.1144791908858405\n"
           ],
           "name": "stdout"
         }
